docs: 프로젝트 초기화, 기본 컴포넌트

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bedrock-layout/css": "^2.13.1",
+    "@bedrock-layout/stack": "^3.3.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
