--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "@bedrock-layout/appboundary": "^3.2.16",
     "@bedrock-layout/center": "^3.2.15",
+    "@bedrock-layout/column-drop": "^3.4.4",
     "@bedrock-layout/cover": "^3.5.4",
     "@bedrock-layout/css": "^2.13.1",
+    "@bedrock-layout/frame": "^3.2.14",
+    "@bedrock-layout/grid": "^4.4.4",
     "@bedrock-layout/inline": "^4.4.4",
     "@bedrock-layout/inline-cluster": "^3.4.4",
+    "@bedrock-layout/masonry-grid": "^4.3.6",
+    "@bedrock-layout/padbox": "^3.2.14",
     "@bedrock-layout/stack": "^3.3.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
